--- a/config.env
+++ b/config.env
@@ -1,2 +1,5 @@
 NODE_DEV=development
-PORT=8000
+PORT=3000
+DATABASE=mongodb+srv://bojan:<PASSWORD>@cluster0.kmajf.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABASE_PASSWORD=W7EG1srEfpPG3Ytf
